[package]
name = "tebex_headless_rust"
description = "Wrapper library for Tebex's Headless API"
readme = "README.md"
repository = "https://github.com/Z3rio/tebex_headless_rust"
version = "0.1.0"
edition = "2021"
license = "GPLv3"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
