[package]
name = "tebex_headless_rust"
description = "Wrapper library for Tebex's Headless API"
readme = "README.md"
repository = "https://github.com/Z3rio/tebex_headless_rust"
version = "0.1.3"
edition = "2021"
license = "GPL-3.0-only"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "^1.34", features = ["full"] }
dotenv = "0.15.0"
reqwest = { version = "0.12.1", features = ["json"] }
serde_json = "1.0.108"
serde = { version = "1.0.193", features = ["derive"] }
local-ip-address = "0.5.6"
